Reformatting JS tip # 1

--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -67,11 +67,41 @@ After executing the test, this is what will happen:
 ## Summary
 
 This approach will work across all browsers. If you want to use it with a remote instance (e.g., on
-[Selenium Grid](https://www.selenium.dev/documentation/grid/) or
-[Sauce Labs](https://saucelabs.com/)) then you'll want to have a look
-at [remote uploads](https://www.selenium.dev/documentation/webdriver/drivers/remote_webdriver/#uploads).
+[Selenium Grid](https://www.selenium.dev/documentation/grid/) or [Sauce Labs](https://saucelabs.com/)) then you'll want to have a look at [remote uploads](https://www.selenium.dev/documentation/webdriver/drivers/remote_webdriver/#uploads).
 
 Happy Testing!
+
+## Special Thanks
+
+import DefaultAvatar from "@site/src/components/defaultAvatar";
+
+<DefaultAvatar
+    name="Mike Millgate"
+    imgSrc={"https://github.com/trabulmonkee.png"}
+    description={"Contributed the Python code for this tip!"}
+/>
+<DefaultAvatar
+    name="Isaul Vargas"
+    imgSrc={"https://github.com/isaulv.png"}
+    description={"Python code review"}
+/>
+<DefaultAvatar
+    name="Peter Bittner"
+    imgSrc={"https://github.com/bittner.png"}
+    description={"Python code review"}
+/>
+
+<DefaultAvatar
+    name="Jonathan Taylor"
+    imgSrc={"https://github.com/jtay2380.png"}
+    description={"Contributed the initial C# code for this tip!"}
+/>
+
+<DefaultAvatar
+    name="Manoj Kumar"
+    imgSrc={"https://github.com/manoj9788.png"}
+    description={"Contributed the initial JavaScript code for this tip!"}
+/>
 
 
 ## Authors
