--- a/frontend/tips/1-upload-a-file/_javascript.mdx
+++ b/frontend/tips/1-upload-a-file/_javascript.mdx
@@ -1,85 +1,43 @@
-First let's pull in our requisite libraries for assertions, constructing a path to a file, and driving the browser with
-Selenium.
+import TipCode from "@site/src/components/tipCode";
 
-```javascript
-// filename: test/upload.spec.js
-const assert = require("assert");
-const {Builder, By} = require("selenium-webdriver");
-const path = require("path");
-// ...
-```
+## TL;DR - Show Me The Code
 
-Now to create a new test class and add in test setup and teardown for it.
+<TipCode codePath={"1-upload-a-file/code/javascript/test/upload.spec.js"} language={"js"}/>
 
-```javascript
-// filename: test/upload.spec.js
-describe("Upload Test", function () {
-    let driver;
+## Code Walkthrough
 
-    beforeEach(async function () {
-        this.timeout(60000)
-        try {
-            driver = await new Builder().forBrowser("firefox").build();
-        } catch (ex) {
-            console.log(ex.stack)
-        }
-    });
+### Importing Libraries
 
-    afterEach(async function () {
-        this.timeout(60000)
-        await driver.quit();
-    });
-// ...
-```
+Lines 1 to 3 are pulling in our requisite classes for interacting with the operating system (e.g., `require("path");`),
+our testing framework (e.g., `mocha` and `require("assert")`), and driving the browser with
+Selenium (e.g., `const {Builder, By} = require("selenium-webdriver");`).
 
-After declaring the class we create two methods. The first method, `beforeEach`, will execute before each test in this
-class. In it we are launching a new instance of Firefox with Selenium and storing it in a class variable that we'll use
-throughout this class. After our test executes the second method, `afterEach`, will execute. This calls `driver.quit()`
-which ends the session by closing the browser instance and then destroying the Selenium object in-memory.
+### Setup and Teardown
 
-Now to wire up our test.
+After creating a `describe` to group our tests (e.g., `describe("Upload Test")...`), lines 8 to 14 are setting up and
+tearing down the browser instance.
 
-```javascript
-// filename: test/upload.spec.js
-// ...
-it("upload a file", async function () {
-    let filename = "some-file.txt";
-    let filePath = path.join(process.cwd(), filename);
+The `beforeEach` method, will execute before each test. In it we are launching a new instance of Firefox with
+Selenium and storing it in a class variable that we'll use throughout all tests. After our test executes the second
+method, `afterEach`, will execute. This calls `driver.quit()` which ends the session by closing the browser instance.
 
-    await driver.get("http://the-internet.herokuapp.com/upload");
-    await driver.findElement(By.id("file-upload")).sendKeys(filePath);
-    await driver.findElement(By.id("file-submit")).click();
+### The Test
 
-    let text = await driver.findElement(By.id("uploaded-files")).getText();
-    assert.equal(text, filename);
-});
-})
-;
-```
+Lines 17 to 25 are the test itself.
 
-After declaring the test method (e.g., `it("upload a file", async function() {`) we specify the name of file we'd like
-to upload. It's a text file called `some-file.txt` in the current working directory. We determine the path to this file
-and store it in a variable called `filePath`.
+After declaring the test method (e.g., `it("upload a file")...`) we specify the name of file we'd like to upload. It's
+a text file called `some-file.txt` in the current working directory. We determine the path to this file and store it
+in a variable called `filePath`.
 
 Next we visit the page with the upload form, input the string value of `filePath`, and click the submit button on the
 form. After the file is uploaded to the page it will display the filename it just processed. We use this text on the
 page to perform our assertion (making sure the uploaded file is what we expect).
 
-## Expected Behavior
+### Executing the Test
 
-When we save this file and run it (e.g., `mocha` from the command-line) this is what will happen:
+Before executing the test, we need to make sure the required dependencies are declared on the `package.json` file.
+Here's what the project file looks like:
 
-+ Open the browser
-+ Visit the upload form page
-+ Inject the file path into the form and submit it
-+ Page displays the uploaded filename
-+ Grab the text from the page and assert it's what we expect
-+ Close the browser
+<TipCode codePath={"1-upload-a-file/code/javascript/package.json"} language={"json"}/>
 
-## Summary
-
-This approach will work across all browsers. If you want to use it with a remote instance (e.g., on Selenium Grid or
-Sauce Labs) then you'll want to have a look
-at [`file_detector`](https://seleniumhq.github.io/selenium/docs/api/javascript/module/selenium-webdriver/remote/index_exports_FileDetector.html).
-
-Happy Testing!
+Finally, we can run the test by executing `npm test` from the command-line.
