--- a/frontend/tips/1-upload-a-file/_javascript.mdx
+++ b/frontend/tips/1-upload-a-file/_javascript.mdx
@@ -36,8 +36,12 @@ page to perform our assertion (making sure the uploaded file is what we expect).
 ### Executing the Test
 
 Before executing the test, we need to make sure the required dependencies are declared on the `package.json` file.
-Here's what the project file looks like:
 
-<TipCode codePath={"1-upload-a-file/code/javascript/package.json"} language={"json"}/>
+<details>
+    <summary>Toggle to see the <code>package.json</code> file.</summary>
+    <div>
+        <TipCode codePath={"1-upload-a-file/code/javascript/package.json"} language={"json"}/>
+    </div>
+</details>
 
 Finally, we can run the test by executing `npm test` from the command-line.
