--- a/frontend/tips/1-upload-a-file/_python.mdx
+++ b/frontend/tips/1-upload-a-file/_python.mdx
@@ -41,9 +41,14 @@ expect).
 
 Before executing the test, we need to install the required libraries. We can do this by running
 `pip install -r requirements.txt` from the command-line. The `requirements.txt` file contains the libraries we
-need to install. Here's what the `requirements.txt` file looks like:
+need to install.
 
-<TipCode codePath={"1-upload-a-file/code/python/requirements.txt"} language={"txt"}/>
+<details>
+    <summary>Toggle to see the <code>requirements.txt</code> file.</summary>
+    <div>
+        <TipCode codePath={"1-upload-a-file/code/python/requirements.txt"} language={"txt"}/>
+    </div>
+</details>
 
 After installing the required libraries, we can run the test by executing `pytest upload.py` from the command-line.
 
