--- a/frontend/tips/1-upload-a-file/_ruby.mdx
+++ b/frontend/tips/1-upload-a-file/_ruby.mdx
@@ -1,68 +1,50 @@
-First let's include our requisite libraries (e.g., `selenium-webdriver` to drive the browser,
-and `rspec/expectations` & `RSpec::Matchers` for our assertion) and wire-up some simple `setup`, `teardown`, and `run`
-methods.
+import TipCode from "@site/src/components/tipCode";
 
-```ruby
-# filename: upload.rb
+## TL;DR - Show Me The Code
 
-require 'selenium-webdriver'
-require 'rspec/expectations'
-include RSpec::Matchers
+<TipCode codePath={"1-upload-a-file/code/ruby/upload.rb"} language={"ruby"}/>
 
-def setup
-  @driver = Selenium::WebDriver.for :firefox
-end
+## Code Walkthrough
 
-def teardown
-  @driver.quit
-end
+### Importing Libraries
 
-def run
-  setup
-  yield
-  teardown
-end
-```
+Lines 1 to 3 are pulling in our requisite classes (e.g., `selenium-webdriver` to drive the browser,
+and `rspec/expectations` & `RSpec::Matchers` for our assertion).
 
-Now we're ready to write our file upload test.
+### Setup and Teardown
 
-```ruby
-run do
-  filename = 'some-file.txt'
-  file = File.join(Dir.pwd, filename)
 
-  @driver.get 'http://the-internet.herokuapp.com/upload'
-  @driver.find_element(id: 'file-upload').send_keys file
-  @driver.find_element(id: 'file-submit').click
+Lines 5 to 11 are setting up and tearing down the browser instance. We're using the `setup` method to launch a new
+instance of Firefox with Selenium and storing it in a class variable that we'll use throughout all tests. After our
+test executes the `teardown` method will execute. This calls `driver.quit()` which ends the session by closing the
+browser instance.
 
-  uploaded_file = @driver.find_element(id: 'uploaded-files').text
-  expect(uploaded_file).to eql filename
-end
-```
+The `run` method is a custom method that we've defined to execute our test. It's a simple wrapper around the `setup`
+and `teardown` methods. We're using it to keep our test code clean and easy to read.
 
-After specifying the `filename` we get the full path to the file (which we're doing
-with `File.join(Dir.pwd, filename)`). This approach assumes that the file is living in the same directory as the test
+### The Test
+
+Lines 18 to 28 are the test itself.
+
+After specifying the `filename` we get the full path to the file (which we're doing with
+`File.join(Dir.pwd, filename)`). This approach assumes that the file is living in the same directory as the test
 script.
 
 Next we visit the page with the upload form, input the `file` text (e.g., the full path to the file plus the filename
 with it's extension), and submit the form. After the file is uploaded the page will display the filename that it just
 processed. We use this text to perform our assertion (making sure the uploaded file is what we expect).
 
-## Expected Behavior
+### Executing the Test
 
-When we save this file and run it (e.g., `ruby upload.rb` from the command-line) this is what will happen:
+Before executing the test, we need to make sure the required dependencies are declared on the `Gemfile` file.
+Here's what the project file looks like:
 
-- Open the browser
-- Visit the upload form page
-- Inject the file path into the form and submit it
-- Page displays the uploaded filename
-- Grab the text from the page and assert it's what we expect
-- Close the browser
+<details>
+    <summary>Toggle to see the <code>Gemfile</code> file.</summary>
+    <div>
+        <TipCode codePath={"1-upload-a-file/code/ruby/Gemfile"} language={"txt"}/>
+    </div>
+</details>
 
-## Summary
 
-This approach will work across all browsers. If you want to use it with a remote instance (e.g., on Selenium Grid or
-Sauce Labs) then you'll want to have a look
-at [`file_detector`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/DriverExtensions/UploadsFiles.html#file_detector%3D-instance_method).
-
-Happy Testing!
+Finally, we can run the test by executing `ruby upload.rb` from the command-line.
