--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -78,45 +78,58 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
 <DefaultAvatar
     name="Mike Millgate"
     imgSrc={"https://github.com/trabulmonkee.png"}
-    description={"Contributed the Python code for this tip!"}
+    description={"Contributed the Python code for this tip."}
+    url={"https://github.com/trabulmonkee"}
 />
 <DefaultAvatar
     name="Isaul Vargas"
     imgSrc={"https://github.com/isaulv.png"}
     description={"Python code review"}
+    url={"https://github.com/isaulv"}
 />
 <DefaultAvatar
     name="Peter Bittner"
     imgSrc={"https://github.com/bittner.png"}
     description={"Python code review"}
+    url={"https://github.com/bittner"}
 />
 
 <DefaultAvatar
     name="Jonathan Taylor"
     imgSrc={"https://github.com/jtay2380.png"}
-    description={"Contributed the initial C# code for this tip!"}
+    description={"Contributed the initial C# code for this tip."}
+    url={"https://github.com/jtay2380"}
 />
 
 <DefaultAvatar
     name="Manoj Kumar"
     imgSrc={"https://github.com/manoj9788.png"}
-    description={"Contributed the initial JavaScript code for this tip!"}
+    description={"Contributed the initial JavaScript code for this tip."}
+    url={"https://github.com/manoj9788"}
 />
 
+<DefaultAvatar
+    name="Roman Isko"
+    imgSrc={"https://github.com/sturman.png"}
+    description={"Contributed the initial Java code for this tip."}
+    url={"https://github.com/sturman"}
+/>
 
 ## Authors
 
-import AuthorAvatar from "@site/src/components/authorAvatar";
-
-<AuthorAvatar
+<DefaultAvatar
     name="Dave Piacente"
     imgSrc={"https://github.com/tourdedave.png"}
     description={"Original creator of Elemental Selenium"}
+    url={"https://github.com/tourdedave"}
+    author={true}
 />
 
-<AuthorAvatar
+<DefaultAvatar
     name="Diego Molina"
     imgSrc={"https://github.com/diemol.png"}
     description={"Current maintainer of Elemental Selenium"}
+    url={"https://github.com/diemol"}
+    author={true}
 />
 
