--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -19,7 +19,7 @@ category:
 
 # How to Upload a File
 
-## Intro
+## The Problem
 
 Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted
 with a dialog box that is just out of reach for your automation script.
