--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -64,7 +64,7 @@ After executing the test, this is what will happen:
 + Grab the text from the page and assert it's what we expect
 + Close the browser
 
-## Summary
+## Outro
 
 This approach will work across all browsers. If you want to use it with a remote instance (e.g., on
 [Selenium Grid](https://www.selenium.dev/documentation/grid/) or [Sauce Labs](https://saucelabs.com/)) then you'll want to have a look at [remote uploads](https://www.selenium.dev/documentation/webdriver/drivers/remote_webdriver/#uploads).
