--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -31,16 +31,14 @@ operating system combinations.
 
 ## A Solution
 
-A work-around for this problem is to side-step the system dialog box entirely. We can do this by using Selenium to
-insert the full path of the file we want to upload (as text) into the form and then submit the form.
+A work-around for this problem is to side-step the system dialog box entirely. We can do this by inserting
+the full path of the file we want to upload (as text) into the form and then submit the form.
 
 Let's step through an example.
 
 ## Example
 
-__NOTE: We are using [a file upload example](https://the-internet.herokuapp.com/upload) found on
-[the-internet](https://github.com/saucelabs/the-internet).__
-
+__NOTE:__ We are using [a file upload example](https://the-internet.herokuapp.com/upload) found on [the-internet](https://github.com/saucelabs/the-internet).
 
 
 import DisplayTips from '@site/src/components/displayTips';
