--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Upload A File'
 id: '1-upload-a-file'
 slug: /1-upload-a-file
 sidebar_label: How To Upload A File
-text: 'Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted with a dialog box that is just out of reach for Selenium. In these cases people often look to a third-party tool to manipulate this window.'
+text: 'Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted with a dialog box that is just out of reach of your automation script.'
 hide_table_of_contents: true
 level: 1
 number: 1
@@ -22,7 +22,7 @@ category:
 ## The Problem
 
 Uploading a file is a common piece of functionality found on the web but when trying to automate it, you get prompted
-with a dialog box that is just out of reach for your automation script.
+with a dialog box that is just out of reach of your automation script.
 
 In these cases people often look to a third-party tool to manipulate this window (e.g., [AutoIt](http://www.toolsqa.com/selenium-webdriver/autoit-selenium-webdriver/)). While this
 can help solve your short-term need, it sets you up for failure later by chaining you to a specific platform (e.g.,
