--- a/frontend/tips/2-download-a-file/_python.mdx
+++ b/frontend/tips/2-download-a-file/_python.mdx
@@ -1,110 +1,63 @@
-## Example
+import TipCode from "@site/src/components/tipCode";
 
-Let's start by pulling in our requisite libraries for interacting with the operating system (e.g., `import os`), creating a temporary directory and cleaning it up, using our testing framework (e.g., `import unittest`), and driving the browser with Selenium (e.g., `from selenium import webdriver`).
+## TL;DR - Show Me The Code
 
-```python
-# filename: download.py
-import os
-import time
-import shutil
-import tempfile
-import unittest
-from selenium import webdriver
-from selenium.webdriver.firefox.options import Options
-from selenium.webdriver.common.by import By
+<TipCode codePath={"2-download-a-file/code/python/download.py"} language={"python"}/>
 
-# ...
-```
+## Code Walkthrough
 
-Now to create a test class and add our test's setup.
+### Importing Libraries
 
-```python
-# filename: download.py
-class Download(unittest.TestCase):
+Lines 1 to 8 are pulling in our requisite libraries for interacting with the operating system (e.g., `import os`),
+creating a temporary directory and cleaning it up, our testing framework (e.g., `import pytest`), driving the browser
+with Selenium (e.g., `from selenium import webdriver`), locator strategy to find the elements
+(e.g. `from selenium.webdriver.common.by import By`), and Selenium's wait functionality
+(e.g., `from selenium.webdriver.support.ui import WebDriverWait`).
 
-    def setUp(self):
-        self.download_dir = tempfile.mkdtemp()
-        options = Options()
-        options.set_preference("browser.download.dir", self.download_dir)
-        options.set_preference("browser.download.folderList", 2)
-        options.set_preference(
-            "browser.helperApps.neverAsk.saveToDisk",
-            "images/jpeg, application/pdf, application/octet-stream")
-        options.set_preference("pdfjs.disabled", True)
-        self.driver = webdriver.Firefox(options=options)
-# ...
-```
+### Setup and Teardown
 
-Our `setUp(self):` method is where the magic is happening in this example. In it we're creating a uniquely named temp directory (e.g., `self.download_dir = tempfile.mkdtemp()`), configuring a browser profile object (for Firefox in this case), and plying it with the necessary configuration parameters to make it automatically download the file where we want (e.g., in the newly created temp directory).
+Lines 12 to 22 are setting up and tearing down the browser instance, a uniquely named temp directory is also created
+(e.g., `download_dir = tempfile.mkdtemp()`) to download the file. Firefox is then configured to make it automatically
+download the file where we want (e.g., in the newly created temp directory).
 
 Here's a breakdown of each of the browser preferences being set:
 
 + `browser.download.dir` accepts a string. This is how we set the custom download path. It needs to be an absolute path.
-+ `browser.download.folderList` takes a number. It tells Firefox which download directory to use. `2` tells it to use a custom download path, wheras `1` would use the browser's default path, and `0` would place them on the Desktop.
-+ `browser.helperApps.neverAsk.saveToDisk` tells Firefox when not to prompt for a file download. It accepts a string of [the file's MIME type](http://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which we've done).
-+ `pdfjs.disabled` is for when downloading PDFs. This overrides the sensible default in Firefox that previews PDFs in the browser. It accepts a boolean.
++ `browser.download.folderList` takes a number. It tells Firefox which download directory to use. `2` tells it to use
+a custom download path, whereas `1` would use the browser's default path, and `0` would place them on the Desktop.
++ `browser.helperApps.neverAsk.saveToDisk` tells Firefox when not to prompt for a file download. It accepts a string
+of [the file's MIME type](http://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which
+we've done).
++ `pdfjs.disabled` is for when downloading PDFs. This overrides the sensible default in Firefox that previews PDFs in
+the browser. It accepts a boolean.
 
-This object is then passed into our instance of Selenium (e.g., `self.driver = webdriver.Firefox(options=options`).
+This object is then passed into our instance of Selenium (e.g., `driver = webdriver.Firefox(options=options`).
 
-Now let's take care of our test's teardown.
+The `@pytest.fixture` decorator is used to create a fixture that sets up and tears down the browser. The `yield`
+keyword is used to pause the fixture until the test is completed. After the test is completed, the fixture resumes
+and executes the teardown code (in this case, `driver.quit()` and delete the temporal directory).
 
-```python
-# filename: download.py
-# ...
-  def tearDown(self):
-      self.driver.quit()
-      shutil.rmtree(self.download_dir)
-# ...
-```
+### The Test
 
-In `tearDown(self):` we close the browser instance and then clean up the temp directory by deleting it, which will recursively delete the files in the folder before deleting it.
+Lines 24 to 39 are the test itself.
 
-Now to wire up our test.
+After visiting the page we find the first download link and click it. The click triggers an automatic download to
+the temp directory created in the `@pytest.fixture`. We need to wait for the download to finish, so we use a
+`WebDriverWait` with a 5 second timeout. We then check that the temp directory isn't empty and that the file isn't
+empty. After the file downloads, we perform some rudimentary checks to make sure the unique temp directory isn't empty
+and then check the file to see that it isn't empty either.
 
-```python
-# filename: download.py
-# ...
-    def test_example_1(self):
-        driver = self.driver
-        driver.get('http://the-internet.herokuapp.com/download')
-        download_link = driver.find_element(By.CSS_SELECTOR, '.example a')
-        download_link.click()
+### Executing the Test
 
-        time.sleep(1.0)  # necessary for slow download speeds
+Before executing the test, we need to install the required libraries. We can do this by running
+`pip install -r requirements.txt` from the command-line. The `requirements.txt` file contains the libraries we
+need to install.
 
-        files = os.listdir(self.download_dir)
-        files = [os.path.join(self.download_dir, f)
-                 for f in files]  # add directory to each filename
-        assert len(files) > 0, "no files were downloaded"
-        assert os.path.getsize(files[0]) > 0, "downloaded file was empty"
+<details>
+    <summary>Toggle to see the <code>requirements.txt</code> file.</summary>
+    <div>
+        <TipCode codePath={"2-download-a-file/code/python/requirements.txt"} language={"txt"}/>
+    </div>
+</details>
 
-
-if __name__ == "__main__":
-    unittest.main()
-```
-
-After visiting the page we find the first download link and click it. The click triggers an automatic download to the temp directory created in `setUp()`. We need to wait for the download to finish, so we add a brief sleep (e.g., `time.sleep(1.0)`). After the file downloads, we perform some rudimentary checks to make sure the unique temp directory isn't empty and then check the file to see that it isn't empty either.
-
-The last two lines of the file are so the file can be executed directly from the command-line.
-
-## Expected Behavior
-
-When we save this file and run it (e.g., `python download.py` from the command-line) this is what will happen:
-
-+ Create a uniquely named temp directory in the present working directory
-+ Open the browser
-+ Visit the page
-+ Find and click the first download link on the page
-+ Automatically download the file to the temp directory without prompting
-+ Check that the temp directory is not empty
-+ Check that the downloaded file is not empty
-+ Close the browser
-+ Delete the temp directory
-
-## Summary
-
-A similar approach can be applied to some other browsers with varying configurations. But downloading files this way is not sustainable or recommended. Mark Collin articulates this point well in his prominent write-up about it [here](http://ardesco.lazerycode.com/index.php/2012/07/how-to-download-files-with-selenium-and-why-you-shouldnt/). In a future tip I'll cover a more reliable, faster, and scalable browser agnostic approach to downloading files. Stay tuned.
-
-Thanks to [Mike Millgate](https://github.com/trabulmonkee) for contributing the Python code for this tip, and to [Isaul Vargas](https://github.com/Dude-X) & [Peter Bittner](https://github.com/bittner) for code reviewing!
-
-Happy Testing!
+After installing the required libraries, we can run the test by executing `pytest download.py` from the command-line.
