--- a/frontend/tips/2-download-a-file/_csharp.mdx
+++ b/frontend/tips/2-download-a-file/_csharp.mdx
@@ -1,112 +1,70 @@
-## Example
+import TipCode from "@site/src/components/tipCode";
 
-Let's start off by declaring our requisite classes for our testing framework (e.g., `using NUnit.Framework`), driving the browser with Selenium (e.g., `using OpenQA.Selenium`, etc.), and leveraging common C# functions (e.g., `using System.IO`, etc.).
+## TL;DR - Show Me The Code
 
-```csharp
-// filename: FileDownload.cs
-using NUnit.Framework;
-using OpenQA.Selenium;
-using OpenQA.Selenium.Firefox;
-using System.IO;
-using System.Threading;
-// ...
-```
+<TipCode codePath={"2-download-a-file/code/csharp/FileDownloadTest.cs"} language={"csharp"}/>
 
-Now to create a class and add our test's setup.
+## Code Walkthrough
 
-```csharp
-// filename: FileDownload.cs
-public class FileDownload
-{
-    IWebDriver Driver;
-    string FolderPath;
+### Importing Libraries
 
-    [SetUp]
-    public void SetUp()
-    {
-        FolderPath = @"C:\Temp\" + System.Guid.NewGuid().ToString();
-        Directory.CreateDirectory(FolderPath);
+Lines 1 to 6 are pulling in our requisite classes for interacting with the operating system (e.g., `using System.IO;`),
+our testing framework (e.g., `using Microsoft.VisualStudio.TestTools.UnitTesting;`), driving the browser with
+Selenium (e.g., `using OpenQA.Selenium;`), launching an instance of Firefox
+(e.g., `using OpenQA.Selenium.Firefox;`), and Selenium's wait functions (e.g., `using OpenQA.Selenium.Support.UI;`).
 
-        FirefoxOptions options = new FirefoxOptions();
-        options.SetPreference("browser.download.dir", FolderPath);
-        options.SetPreference("browser.download.folderList", 2);
-        options.SetPreference("browser.helperApps.neverAsk.saveToDisk",
-                      "image/jpeg, application/pdf, application/octet-stream");
-        options.SetPreference("pdfjs.disabled", true);
-        Driver = new FirefoxDriver(options);
-    }
-// ...
-```
+### Setup and Teardown
 
-Our `SetUp()` method is where the magic is happening in this example. In it we're creating a uniquely named temp directory (e.g., `System.Guid.NewGuid().ToString();`), configuring a browser profile object (for Firefox in this case), and plying it with the necessary configuration parameters to make it automatically download the file where we want (e.g., in the newly created temp directory).
+After specifying the namespace and the class (e.g., `public class FileDownloadTest`), lines 17 to 35 are setting up and
+tearing down the browser instance.
+
+First we create a field variable (e.g., `IWebDriver _driver;`) to store our WebDriver instance for reuse throughout
+the class.
+
+We then create a `SetUp()` method with a `[TestInitialize]` attribute so it runs before our test. This is where the
+magic is happening in this example. In it we're creating a uniquely named temp directory
+(e.g., `System.Guid.NewGuid().ToString();`), configuring a browser options object (for Firefox in this case), and
+plying it with the necessary configuration parameters to make it automatically download the file where we want
+(e.g., in the newly created temp directory).
 
 Here's a breakdown of each of the browser preferences being set:
 
 - `browser.download.dir` accepts a string. This is how we set the custom download path. It needs to be an absolute path.
-- `browser.download.folderList` takes a number. It tells Firefox which download directory to use. `2` tells it to use a custom download path, wheras `1` would use the browser's default path, and `0` would place them on the Desktop.
-- `browser.helperApps.neverAsk.saveToDisk` tells Firefox when not to prompt for a file download. It accepts a string of [the file's MIME type](http://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which we've done).
-- `pdfjs.disabled` is for when downloading PDFs. This overrides the sensible default in Firefox that previews PDFs in the browser. It accepts a boolean.
+- `browser.download.folderList` takes a number. It tells Firefox which download directory to use. `2` tells it to use
+a custom download path, whereas `1` would use the browser's default path, and `0` would place them on the Desktop.
+- `browser.helperApps.neverAsk.saveToDisk` tells Firefox when not to prompt for a file download. It accepts a string
+of [the file's MIME type](http://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which
+we've done).
+- `pdfjs.disabled` is for when downloading PDFs. This overrides the sensible default in Firefox that previews PDFs in
+the browser. It accepts a boolean.
 
-This profile object is then passed into our instance of Selenium (e.g., `Driver = new FirefoxDriver(Profile);`).
+The options are then passed into our instance of Selenium (e.g., `_driver = new FirefoxDriver(Options);`).
 
-Now let's take care of our test's teardown.
+After our test executes, the `TearDown()` method will run thanks to the `[TestCleanup]` attribute. This
+calls `_driver?.Quit();` which will close the browser instance. Then, it will clean up the temp directory by deleting
+it. Specifying `true` as a second parameter for `Directory.Delete()` will recursively delete the files in the folder
+before deleting it.
 
-```csharp
-// filename: FileDownload.cs
-// ...
-    [TearDown]
-    public void TearDown()
-    {
-        Driver.Quit();
-        Directory.Delete(FolderPath, true);
-    }
-// ...
-```
+### The Test
 
-In `TearDown()` we close the browser instance and then clean up the temp directory by deleting it. Specifying `true` as a second parameter for `Directory.Delete()` will recursively delete the files in the folder before deleting it.
+Lines 38 to 56 are the test itself.
 
-Now to wire up our test.
+We create an `DownloadFileToDisk()` method and add a `[TestMethod]` attribute, so it is run as a test. In it, we visit
+the page we find the first download link and click it. The click triggers an automatic download to the temp directory
+created in `SetUp()`. We need to wait for the download to finish, so we leverage the `WebDriverWait` class to wait for
+the file to exist in the directory. After the file downloads, we perform some rudimentary checks to make sure the
+unique temp directory isn't empty and then check the file (or files) to see that they aren't empty either.
 
-```csharp
-// filename: FileDownload.cs
-// ...
-    [Test]
-    public void DownloadFileToDisk()
-    {
-        Driver.Navigate().GoToUrl("http://the-internet.herokuapp.com/download");
-        Driver.FindElement(By.CssSelector(".example a")).Click();
-        Thread.Sleep(2000);
+### Executing the Test
 
-        DirectoryInfo DownloadFolder = new DirectoryInfo(FolderPath);
-        Assert.IsTrue(DownloadFolder.GetFiles().Length > 0, "File not downloaded");
-        foreach(FileInfo file in DownloadFolder.GetFiles())
-        {
-            Assert.IsTrue(file.Length > 0, "File empty");
-        }
-    }
-}
-```
+Before executing the test, we need to make sure the required dependencies are declared on the project file (e.g.,
+`csharp.csproj` in this case).
 
-After visiting the page we find the first download link and click it. The click triggers an automatic download to the temp directory created in `SetUp()`. We need to wait for the download to finish, so we add a brief sleep (e.g., `Thread.sleep(2000);`). After the file downloads, we perform some rudimentary checks to make sure the unique temp directory isn't empty and then check the file (or files) to see that they aren't empty either.
+<details>
+    <summary>Toggle to see the <code>csharp.csproj</code> file.</summary>
+    <div>
+        <TipCode codePath={"2-download-a-file/code/csharp/csharp.csproj"} language={"xml"}/>
+    </div>
+</details>
 
-## Expected Behavior
-
-When you save this file and run it (e.g., `nunit3-console.exe .\FileDownload.sln` from the command-line) here is will happen:
-
-- Create a uniquely named temp directory in the present working directory
-- Open the browser
-- Visit the page
-- Find and click the first download link on the page
-- Automatically download the file to the temp directory without prompting
-- Check that the temp directory is not empty
-- Check that the downloaded file is not empty
-- Close the browser
-- Delete the temp directory
-
-## Summary
-
-A similar approach can be applied to some other browsers with varying configurations. But downloading files this way is not sustainable or recommended. Mark Collin articulates this point well in his prominent write-up about it [here](http://ardesco.lazerycode.com/index.php/2012/07/how-to-download-files-with-selenium-and-why-you-shouldnt/).
-
-Thanks to Jonathan Taylor for contributing the initial C# code for this tip!
-
-Happy Testing!
+Finally, we can run the test by executing `dotnet test` from the command-line.
