Tip 2 in Java, updated

--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -100,6 +100,13 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     url={"https://github.com/jtay2380"}
 />
 
+<DefaultAvatar
+    name="Roman Isko"
+    imgSrc={"https://github.com/sturman.png"}
+    description={"Contributed the initial Java code for this tip."}
+    url={"https://github.com/sturman"}
+/>
+
 ## Authors
 
 <DefaultAvatar
